# WorldEdit

./: .gitignore  CMakeLists.txt  Directory.Build.props  README.md  SKWorldEdit.sln  SKWorldEdit.vcxproj  SKWorldEdit.vcxproj.filters  TODO Next.txt  WorldEdit.sln  WorldEdit.vcxproj  WorldEdit.vcxproj.filters  packages.config  third_party.txt  third_party.yml  vcpkg.json
.github/workflows/: build.yml
app/: app.vcxproj  app.vcxproj.filters  manifest.xml  packages.config
app/src/: dx_agility_sdk_exports.cpp  main.cpp  new_delete_override.cpp  resource.h  resource.rc  run_munge.cpp  run_munge.hpp  version.h  world_edit.cpp  world_edit.hpp  world_edit_commands.cpp  world_edit_ui.cpp  world_edit_ui_about_window.cpp  world_edit_ui_active_world_context.cpp  world_edit_ui_animation_editor.cpp  world_edit_ui_animation_group_editor.cpp  world_edit_ui_animation_hierarchy_editor.cpp  world_edit_ui_camera_controls.cpp  world_edit_ui_effects_editor.cpp  world_edit_ui_export_selection.cpp  world_edit_ui_foliage_editor.cpp  world_edit_ui_hotkeys_view.cpp  world_edit_ui_load_errors.cpp  world_edit_ui_main_menu_bar.cpp  world_edit_ui_measurement_tool.cpp  world_edit_ui_munge.cpp  world_edit_ui_object_class_browser.cpp  world_edit_ui_render_env_map.cpp  world_edit_ui_terrain_crop.cpp  world_edit_ui_terrain_editor.cpp  world_edit_ui_terrain_extend.cpp  world_edit_ui_terrain_import_color_map.cpp  world_edit_ui_terrain_import_heightmap.cpp  world_edit_ui_terrain_import_texture_weight_map.cpp  world_edit_ui_terrain_light_baker.cpp  world_edit_ui_terrain_resize.cpp  world_edit_ui_texture_pick.cpp  world_edit_ui_water_editor.cpp  world_edit_ui_world_block_editor.cpp  world_edit_ui_world_block_material_editor.cpp  (+22 more)
cursors/: enlarge_texture.cur  paintbrush.cur  rotate_cw.cur  shrink_texture.cur
docs/: BUILDING.md  D3D12 Abstraction.md  Shader Compiler.md  Terrain Light Map Baking.md  command line.txt
docs/user/: Munging.md
include/: com_ptr.hpp  error.hpp  exceptions.hpp  hresult_error.hpp  output_stream.hpp
include/container/: dynamic_array_2d.hpp
include/graphics/: bounding_box.hpp
include/ucfb/: reader.hpp
include/utility/: binary_reader.hpp  enum_bitflags.hpp  make_from_bytes.hpp  read_file.hpp  srgb_conversion.hpp  string_ops.hpp
include/world/: ai_path_flags.hpp  boundary.hpp  light.hpp  object.hpp  path.hpp  planning.hpp  portal.hpp  region.hpp  world.hpp  world_io.hpp
shaders/: .clang-format  WorldEdit.shaders  ai_overlay_applyPS.hlsl  ai_overlay_applyVS.hlsl  ai_overlay_shapeVS.hlsl  bindings.hlsli  bindless.hlsli  blockVS.hlsl  block_basicPS.hlsl  block_basic_lightingPS.hlsl  block_material.hlsli  block_normalPS.hlsl  block_surface_highlightVS.hlsl  brightness_adjust.hlsl  depth_reduce_minmaxCS.hlsl  fog.hlsli  frame_constants.hlsli  gizmo_conePS.hlsl  gizmo_coneVS.hlsl  gizmo_cone_constants.hlsli  gizmo_linePS.hlsl  gizmo_lineVS.hlsl  gizmo_line_constants.hlsli  gizmo_quadPS.hlsl  gizmo_quadVS.hlsl  gizmo_quad_constants.hlsli  gizmo_rotation_widgetPS.hlsl  gizmo_rotation_widgetVS.hlsl  gizmo_rotation_widget_constants.hlsli  grid_overlay.hlsl  imgui.hlsl  lights_common.hlsli  line_helpers.hlsli  material_normal.hlsli  meshVS.hlsl  mesh_basicPS.hlsl  mesh_basic_lightingPS.hlsl  mesh_depth_cutoutPS.hlsl  mesh_depth_prepassVS.hlsl  mesh_normalPS.hlsl  (+58 more)
src/: commands.cpp  commands.hpp  exceptions.hpp  gizmo.cpp  gizmo.hpp  gizmos.cpp  gizmos.hpp  hotkeys.cpp  hotkeys.hpp  hotkeys_io.cpp  hotkeys_io.hpp  hresult_error.cpp  hresult_error.hpp  imgui_ext.cpp  imgui_ext.hpp  input_state.cpp  input_state.hpp  key.cpp  key.hpp  key_input_manager.cpp  key_input_manager.hpp  lowercase_string.hpp  output_stream.cpp  output_stream.hpp  scale_factor.hpp  string.cpp  string.hpp  types.hpp
src/actions/: action.hpp  edit.hpp  imgui_ext.hpp  insert_entity.cpp  insert_entity.hpp  insert_node.cpp  insert_node.hpp  stack.cpp  stack.hpp  ui_action.hpp
src/allocators/: aligned_allocator.hpp  offset_allocator.cpp  offset_allocator.hpp  temp_buffer_allocator.cpp  temp_buffer_allocator.hpp
src/assets/: asset_libraries.cpp  asset_libraries.hpp  asset_loaders.cpp  asset_loaders.hpp  asset_ref.cpp  asset_ref.hpp  asset_stable_string.hpp  asset_state.hpp  asset_traits.cpp  asset_traits.hpp  option_file.cpp  option_file.hpp
src/async/: for_each.hpp  get_all.hpp  thread_pool.cpp  thread_pool.hpp  wait_all.hpp
src/container/: container.natvis  dynamic_array_2d.hpp  enum_array.hpp  paged_stack.hpp  pinned_vector.cpp  pinned_vector.hpp  ring_set.hpp  slim_bitset.hpp
src/edits/: add_animation.cpp  add_animation.hpp  add_animation_group.cpp  add_animation_group.hpp  add_animation_group_entry.cpp  add_animation_group_entry.hpp  add_animation_hierarchy.cpp  add_animation_hierarchy.hpp  add_animation_hierarchy_child.cpp  add_animation_hierarchy_child.hpp  add_block.cpp  add_block.hpp  add_branch_weight.cpp  add_branch_weight.hpp  add_game_mode.cpp  add_game_mode.hpp  add_layer.cpp  add_layer.hpp  add_property.cpp  add_property.hpp  add_sector_object.cpp  add_sector_object.hpp  add_sun_flare.cpp  add_sun_flare.hpp  add_world_req_entry.cpp  add_world_req_entry.hpp  add_world_req_list.cpp  add_world_req_list.hpp  bundle.cpp  bundle.hpp  creation_entity_set.cpp  creation_entity_set.hpp  delete_animation.cpp  delete_animation.hpp  delete_animation_group.cpp  delete_animation_group.hpp  delete_animation_group_entry.cpp  delete_animation_group_entry.hpp  delete_animation_hierarchy.cpp  delete_animation_hierarchy.hpp  (+64 more)
src/graphics/: ai_overlay_batches.cpp  ai_overlay_batches.hpp  blocks.cpp  blocks.hpp  bounding_box.hpp  buffer.hpp  camera.cpp  camera.hpp  command_allocator_pool.hpp  command_list_pool.hpp  command_list_recorder.hpp  concepts.hpp  constant_buffers.hpp  copy_command_list_pool.cpp  copy_command_list_pool.hpp  cull_objects.cpp  cull_objects.hpp  descriptor_heap.cpp  descriptor_heap.hpp  dynamic_buffer_allocator.cpp  dynamic_buffer_allocator.hpp  fallback_imgui_texture.hpp  frustrum.cpp  imgui.hpp  (+58 more)
tests/: Catch2Adapter.runsettings  key_tests.cpp  packages.config  tests.vcxproj  tests.vcxproj.filters
(+1213 files in other folders)
